[package]
name = "price-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
reqwest = { version = "=0.11.18", features = ["blocking", "gzip", "json"] }
serde = { version = "=1.0.177", features = ["derive"] }
serde_json = "=1.0.104"