[package]
name = "price-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
anyhow = "1.0.72"
reqwest = { version = "0.11.22", features = ["blocking", "gzip", "json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
async-trait = "0.1.74"
tokio = { version = "1.34.0", features = ["full"] }
lazy_static = "1.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"